[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["command-line-interface"]
description = "Library to retrieve information about a Cargo project"
documentation = "https://docs.rs/cargo-project"
keywords = ["Cargo", "project", "subcommand"]
license = "MIT OR Apache-2.0"
name = "cargo-project"
repository = "https://github.com/japaric/cargo-project"
version = "0.3.0"

[dependencies]
glob = "0.3.0"
log = "0.4.8"
rustc-cfg = "0.5.0"
serde = "1.0.79"
serde_derive = "1.0.79"
thiserror = "1"
toml = "0.4.6"
